# AvitoTestTask

./: .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  db_client.py  dto.py  lifespan.py  rest_handler.py  review_service.py  sql_models.py
