[project]
name = "avitotesttask"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.50.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
